Closed Bug 816575 Opened 12 years ago Closed 12 years ago

undefined reference to 'webrtc::SetRenderAndroidVM

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

ARM
Android
defect

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: gcp, Assigned: gcp)

References

Details

(Whiteboard: [WebRTC] [blocking-webrtc-] [qa-])

Attachments

(1 file)

/home/morbo/hg/mozilla-central/media/webrtc/trunk/src/video_engine/vie_impl.cc:219: error: undefined reference to 'webrtc::SetRenderAndroidVM(void*)'

<derf> I suspect that block needs to be wrapped in a
<derf> #ifdef WEBRTC_VIDEO_ENGINE_RENDER_API
<derf> (the other one should be wrapped in #ifdef #ifdef WEBRTC_VIDEO_ENGINE_CAPTURE_API
<derf> ... but that's not a problem for us)
Blocks: 750869
Sorry, the first #ifdef should actually be for WEBRTC_INCLUDE_INTERNAL_VIDEO_RENDER.

For the second #ifdef, it doesn't look like there actually _is_ a define triggered off of include_internal_video_capture, which controls compilation of the definition of SetCaptureAndroidVM(). This isn't actually a problem for us, because we always use the interal capture API, but is definitely broken.

Please file an issue upstream.
This looks similar to WebRTC issue 486.
Attachment #686658 - Flags: review?(tterribe)
Comment on attachment 686658 [details] [diff] [review]
Patch 1. Fix compiling with external video renderer

Review of attachment 686658 [details] [diff] [review]:
-----------------------------------------------------------------

Perhaps would be better to use the patch from <http://code.google.com/p/webrtc/issues/detail?id=486>, but this one seems fine to me, too.
Attachment #686658 - Flags: review?(tterribe) → review+
Note: patch needs upstreaming
Priority: -- → P2
Whiteboard: [WebRTC] [blocking-webrtc-]
Sorry, I meant to say "doesn't need upstreaming"
https://hg.mozilla.org/mozilla-central/rev/9ee7c79e2ff0
Assignee: nobody → gpascutto
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Whiteboard: [WebRTC] [blocking-webrtc-] → [WebRTC] [blocking-webrtc-] [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: