Bug 816575 - Remove call to SetRenderAndroidVM when not using internal renderer. r=tterribe